# dustr

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  INSTALL.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  setup.py  test_dustr.py
.benchmarks/Darwin-CPython-3.12-64bit/: 0001_baseline.json
.github/workflows/: build.yml
dev/bench/: data.js
man/: dustr.1
python/dustr/: __init__.py  __main__.py
src/: core.rs  lib.rs  main.rs
