[package]
name = "dustr-cli"
version = "1.0.2"
edition = "2021"
description = "Fast Rust-based disk usage analyzer with histogram visualization"
license = "LGPL-3.0-or-later"
repository = "https://github.com/wvangeit/dustr"
readme = "README.md"
keywords = ["disk-usage", "du", "cli", "histogram", "terminal"]
categories = ["command-line-utilities", "filesystem"]

[lib]
name = "dustr"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "dustr-cli"
path = "src/main.rs"

[features]
default = []
extension-module = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.27", optional = true }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
jwalk = "0.8"
parking_lot = "0.12"
signal-hook = "0.3"
